syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message DeleteFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1;
}
